nnn v1.7
2018-02-nn

What's in?
- Copy multiple file paths
- Copy file paths when X is unavailable
- Optionally quote individual file paths with single quotes on copy
- Use ISO 8601 date format in file details
- New/changed/remapped shortcuts:
  - <kbd>^B</kbd> - show bookmark prompt (replaces <kbd>b</kbd>)
  - <kbd>b</kbd> - pin current dir (replaces <kbd>^B</kbd>)
  - <kbd>^J</kbd> - toggle du mode
  - <kbd>^F</kbd> - extract archive (replaces <kbd>^X</kbd>)
  - <kbd>^X</kbd> - quit nnn (replaces <kbd>^Q</kbd>)
- Extra shortcuts enabled in nav-as-you-type mode:
  - <kbd>^K</kbd>, <kbd>^Y</kbd> (file path copy)
  - <kbd>^T</kbd> (toggles quoted file path copy)
  - <kbd>^R</kbd> (rename)
  - <kbd>^O</kbd> (open with...)
  - <kbd>^B</kbd> (show bookmark prompt)
  - <kbd>^V</kbd> (visit pinned dir)
  - <kbd>^J</kbd> (toggle du mode)
  - <kbd>^/</kbd> (open desktop opener)
  - <kbd>^F</kbd> (extract archive)
  - <kbd>^L</kbd> (refresh)
  - <kbd>^X</kbd> (quit nnn)

-------------------------------------------------------------------------------

nnn v1.6
2017-12-25

What's in?
- Shortcut `^O` to open file with custom application
- Option `-b` to open bookmarks directly at start
- Huge performance improvements around file name storing and handling
- Several large static buffers removed or reduced
- Several internal algorithms fine tuned for performance/resource usage

-------------------------------------------------------------------------------

nnn v1.5
2017-10-05

What's in?
- File and directory creation (`n`)
- Env variable `NNN_NOWAIT` to unblock nnn when opening files (DE-specific)
- Show current entry number in status bar
- Support archive listing (`F`) and extraction (`Ctrl-X`) [using `atool`]
- Show correct file size on i386 for large files (> 2GB)

-------------------------------------------------------------------------------

nnn v1.4
2017-09-04

What's in?
- Monitor directory changes
- In-place file rename